--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -1,19 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: #eff3f7;
-  height: 100%;
-}
-
-html,
-body,
-#root,
 .container {
   height: 100%;
   display: flex;
@@ -22,11 +6,11 @@ body,
 
 .loader {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-weight: 300px;
+  font-weight: 300;
 }
 
 .movies {
